--- a/src/app/main/pages/auth/activate/activate.scss
+++ b/src/app/main/pages/auth/activate/activate.scss
@@ -13,7 +13,7 @@
             background: #FFFFFF;
             text-align: center;
             .logo {
-                width: 128px;
+                // width: 128px;
                 height: 128px;
                 line-height: 128px;
                 font-size: 86px;
