--- a/src/app/main/pages/auth/register/register.scss
+++ b/src/app/main/pages/auth/register/register.scss
@@ -16,7 +16,7 @@
             text-align: center;
 
             .logo {
-                width: 128px;
+                // width: 128px;
                 height: 128px;
                 line-height: 128px;
                 font-size: 86px;
