--- a/src/app/main/pages/auth/reset-password/reset-password.scss
+++ b/src/app/main/pages/auth/reset-password/reset-password.scss
@@ -16,7 +16,7 @@
             background: #FFFFFF;
 
             .logo {
-                width: 128px;
+                // width: 128px;
                 height: 128px;
                 line-height: 128px;
                 font-size: 86px;
