--- a/src/app/navigation/layouts/vertical-navigation/navigation.scss
+++ b/src/app/navigation/layouts/vertical-navigation/navigation.scss
@@ -17,12 +17,12 @@
             .logo-image {
                 display: block;
                 background: material-color('light-blue', '600');
-                width: 32px;
+                // width: 32px;
                 min-width: 32px;
                 height: 32px;
                 line-height: 32px;
                 text-align: center;
-                font-size: 16px;
+                font-size: 14px;
                 font-weight: 500;
                 color: #FFFFFF;
                 border-radius: 2px;
@@ -30,8 +30,8 @@
 
             .logo-text {
                 color: #FFFFFF;
-                margin-left: 16px;
-                font-size: 16px;
+                margin-left: 14px;
+                font-size: 14px;
             }
         }
 
