--- a/src/app/main/admin/patientViewer/patientViewer.scss
+++ b/src/app/main/admin/patientViewer/patientViewer.scss
@@ -1,30 +1,4 @@
-#patient-viewer {
-	> .center {
-		> .header {
-			height: 160px;
-			min-height: 160px;
-			max-height: 160px;
-			padding-bottom: 0;
-			background-image
-
-			.selected-project {
-				background: rgba(0, 0, 0, 0.12);
-				color: #FFFFFF;
-				padding: 8px 16px;
-				height: 40px;
-				line-height: 24px;
-				font-size: 16px;
-			}
-
-			.project-selector {
-				margin-left: 1px;
-				border-radius: 0;
-				background: rgba(0, 0, 0, 0.12);
-
-				md-icon {
-					color: #FFFFFF;
-				}
-			}
-		}
-	}
+.appointment-form-divider {
+	padding: 5px 0px;
+	margin: 20px 0px;
 }
