Fix patient service for new model

--- a/src/app/main/admin/admin.scss
+++ b/src/app/main/admin/admin.scss
@@ -8,6 +8,10 @@
 .page-layout.carded.left-sidenav > .center .content-card .toolbar {
 	padding: 0;
 }
+
+.input-date {
+	min-width: 200px;
+}
 // Center
 .center {
 	.header {
