--- a/src/app/main/admin/patientViewer/patientViewer.html
+++ b/src/app/main/admin/patientViewer/patientViewer.html
@@ -100,15 +100,8 @@
 							<ms-widget-front class="white-bg">
 								<div class="ph-8 pv-16 h-55" layout="row" layout-align="space-between center">
 									<h1>Weight Graph</h1>
-									<md-radio-group ng-model="$ctrl.graphType" ng-change="$ctrl.updateGraph()">
-										<md-radio-button class="radio-inline" value="weight">Weight</md-radio-button>
-										<md-radio-button class="radio-inline" value="alsfrs">ALSFRS-R</md-radio-button>
-										<md-radio-button class="radio-inline" value="ess">ESS</md-radio-button>
-										<md-radio-button class="radio-inline" value="fvc">FVC</md-radio-button>
-										<md-radio-button class="radio-inline" value="spO2">SpO2</md-radio-button>
-									</md-radio-group>
 								</div>
-								<nvd3 class="h-400 remove-x-lines remove-opacity" options="$ctrl.graphOptionsWeight" data="$ctrl.graphDataWeight" config="{deepWatchData: false}"></nvd3>
+								<nvd3 class="h-400 remove-x-lines remove-opacity" options="$ctrl.graphOptionsWeight" data="$ctrl.graphDataWeight" api="$ctrl.graphApiWeight" config="{deepWatchData: false}"></nvd3>
 							</ms-widget-front>
 						</ms-widget>
 						<ms-widget layout="column">
@@ -116,7 +109,7 @@
 								<div class="ph-8 pv-16 h-55" layout="row" layout-align="space-between center">
 									<h1>ESS Graph</h1>
 								</div>
-								<nvd3 class="h-400 remove-x-lines remove-opacity" options="$ctrl.graphOptionsEss" data="$ctrl.graphDataEss" config="{deepWatchData: false}"></nvd3>
+								<nvd3 class="h-400 remove-x-lines remove-opacity add-points" options="$ctrl.graphOptionsEss" data="$ctrl.graphDataEss" api="$ctrl.graphApiEss" config="{deepWatchData: false}"></nvd3>
 							</ms-widget-front>
 						</ms-widget>
 						<ms-widget layout="column">
@@ -124,7 +117,7 @@
 								<div class="ph-8 pv-16 h-55" layout="row" layout-align="space-between center">
 									<h1>FVC Graph</h1>
 								</div>
-								<nvd3 class="h-400 remove-x-lines remove-opacity" options="$ctrl.graphOptionsFvc" data="$ctrl.graphDataFvc" config="{deepWatchData: false}"></nvd3>
+								<nvd3 class="h-400 remove-x-lines remove-opacity add-points" options="$ctrl.graphOptionsFvc" data="$ctrl.graphDataFvc" api="$ctrl.graphApiFvc" config="{deepWatchData: false}"></nvd3>
 							</ms-widget-front>
 						</ms-widget>
 						<ms-widget layout="column">
@@ -132,7 +125,7 @@
 								<div class="ph-8 pv-16 h-55" layout="row" layout-align="space-between center">
 									<h1>SpO2 Graph</h1>
 								</div>
-								<nvd3 class="h-400 remove-x-lines remove-opacity" options="$ctrl.graphOptionsSpO2" data="$ctrl.graphDataSpO2" config="{deepWatchData: false}"></nvd3>
+								<nvd3 class="h-400 remove-x-lines remove-opacity add-points" options="$ctrl.graphOptionsSpO2" data="$ctrl.graphDataSpO2" api="$ctrl.graphApiSpO2" config="{deepWatchData: false}"></nvd3>
 							</ms-widget-front>
 						</ms-widget>
 					</div>
