--- a/src/app/main/admin/patients/dialogs/patient-dialog.html
+++ b/src/app/main/admin/patients/dialogs/patient-dialog.html
@@ -21,10 +21,7 @@
 					</md-input-container>
 					<md-input-container>
 						<label>Last Name</label>
-						<input type="text" name="lastName" ng-model="vm.patient.lastName" autocomplete="off" required>
-						<div ng-messages="patientForm.lastName.$error">
-							<div ng-message="required">This is required.</div>
-						</div>
+						<input type="text" name="lastName" ng-model="vm.patient.lastName" autocomplete="off">
 					</md-input-container>
 					<md-input-container class="input-date">
 						<label>Date of Birth</label>
