--- a/src/app/main/admin/patientViewer/patientViewer.html
+++ b/src/app/main/admin/patientViewer/patientViewer.html
@@ -82,7 +82,7 @@
 													<td md-cell>{{appointment.ess.total}}</td>
 													<td md-cell>{{appointment.fvc.sitting}}</td>
 													<td md-cell>{{appointment.fvc.supine}}</td>
-													<td md-cell>{{appointment.snp}}</td>
+													<td md-cell>{{appointment.snp.score}}</td>
 													<td md-cell>{{appointment.spO2}}</td>
 													<td md-cell>{{appointment.abg ? 'true' : 'false'}}</td>
 													</td>
