Added height and BMI

--- a/src/app/main/admin/patientViewer/dialogs/appointment-dialog.html
+++ b/src/app/main/admin/patientViewer/dialogs/appointment-dialog.html
@@ -28,8 +28,16 @@
 										</div>
 									</md-input-container>
 									<md-input-container>
-										<label>Weight</label>
+										<label>Weight (kg)</label>
 										<input type="number" name="weight" ng-model="vm.appointment.weight" autocomplete="off">
+									</md-input-container>
+									<md-input-container>
+										<label>Height (meters)</label>
+										<input type="number" name="height" ng-model="vm.appointment.height" autocomplete="off">
+									</md-input-container>
+									<md-input-container>
+										<label>BMI</label>
+										<input type="number" name="height" ng-model="vm.appointment.bmi" disabled>
 									</md-input-container>
 								</div>
 								<h3>Respiratory Effort</h3>
