--- a/src/app/main/admin/patients/dialogs/patient-dialog.html
+++ b/src/app/main/admin/patients/dialogs/patient-dialog.html
@@ -55,6 +55,10 @@
 							<div ng-message="required">This is required.</div>
 						</div>
 					</md-input-container>
+					<md-input-container>
+						<label>Postcode</label>
+						<input type="text" name="postcode" ng-model="vm.patient.postcode" autocomplete="off">
+					</md-input-container>
 				</div>
 				<div>
 					<md-input-container>
