--- a/src/app/core/directives/ms-shortcuts/ms-shortcuts.html
+++ b/src/app/core/directives/ms-shortcuts/ms-shortcuts.html
@@ -6,16 +6,16 @@
              ng-if="MsShortcuts.shortcuts.length > 0"
              ng-sortable="MsShortcuts.sortableOptions">
             <div ng-repeat="shortcut in MsShortcuts.shortcuts" layout="row" layout-align="center center">
-                <md-button class="md-icon-button shortcut" aria-label="{{shortcut.title}}"
+                <md-button class="shortcut" aria-label="{{shortcut.title}}" layout="row"
                            ui-sref="{{shortcut.uisref}}">
-                    <md-icon ng-if="shortcut.icon" md-font-icon="{{shortcut.icon}}" class="icon s24"></md-icon>
-                    <div ng-if="!shortcut.icon" class="first-letter">{{shortcut.title.charAt(0)}}</div>
-                    <md-tooltip md-direction="bottom">{{shortcut.title}}</md-tooltip>
+                    <md-icon ng-if="shortcut.icon" md-font-icon="{{shortcut.icon}}" class="icon s24"></md-icon>&nbsp;&nbsp;{{shortcut.title}}
+                    <!-- <div ng-if="!shortcut.icon" class="first-letter">{{shortcut.title.charAt(0)}}</div>
+                    <md-tooltip md-direction="bottom">{{shortcut.title}}</md-tooltip> -->
                 </md-button>
             </div>
         </div>
 
-        <md-menu md-offset="8 56" class="shortcut-menu hide show-gt-xs">
+        <!-- <md-menu md-offset="8 56" class="shortcut-menu hide show-gt-xs">
             <md-button class="md-icon-button add-shortcut-button" aria-label="Add shortcut"
                        ng-click="$mdOpenMenu($event)">
                 <md-icon md-menu-origin md-font-icon="icon-star" class="icon amber-600-fg s24"></md-icon>
@@ -68,14 +68,14 @@
                     </div>
                 </div>
             </md-menu-content>
-        </md-menu>
+        </md-menu> -->
     </div>
 
-    <md-button class="md-icon-button toggle-mobile-menu hide-gt-xs" aria-label="Add shortcut"
+    <!-- <md-button class="md-icon-button toggle-mobile-menu hide-gt-xs" aria-label="Add shortcut"
                ng-click="MsShortcuts.toggleMobileBar()">
         <md-icon md-menu-origin md-font-icon="icon-star" class="icon amber-600-fg s24"
                  ng-hide="MsShortcuts.mobileBarActive"></md-icon>
         <md-icon md-menu-origin md-font-icon="icon-close" class="icon s24"
                  ng-hide="!MsShortcuts.mobileBarActive"></md-icon>
-    </md-button>
+    </md-button> -->
 </div>
