Implemented excel exporting

--- a/src/app/main/admin/patients/patients.html
+++ b/src/app/main/admin/patients/patients.html
@@ -30,6 +30,9 @@
                     <div class="md-toolbar-tools">
                         <span>Patients</span>
                         <span flex></span>
+						<md-button class="md-raised" ng-click="$ctrl.exportPatients()">
+							<md-icon md-font-icon="icon-export" class="icon" aria-label="export"></md-icon> Export All
+						</md-button>
                     </div>
                 </md-toolbar>
                 <md-toolbar class="md-table-toolbar alternate" ng-if="$ctrl.options.rowSelection && $ctrl.selected.length">
