Renable fragments and fix typename errors

--- a/src/app/main/admin/patients/patients.html
+++ b/src/app/main/admin/patients/patients.html
@@ -31,7 +31,7 @@
                         <span>Patients</span>
                         <span flex></span>
 						<md-button class="md-raised" ng-click="$ctrl.exportPatients()">
-							<md-icon md-font-icon="icon-export" class="icon" aria-label="export"></md-icon> Export All
+							<md-icon md-font-icon="icon-export" class="icon" aria-label="export"></md-icon>&nbsp;Export All
 						</md-button>
                     </div>
                 </md-toolbar>
